Troubleshot mobile visibility issues.

--- a/app/assets/styles/base/_mixins.css
+++ b/app/assets/styles/base/_mixins.css
@@ -16,6 +16,12 @@
 	}
 }
 
+@define-mixin atExLarge {
+	@media (min-width: 1150px) {
+		@mixin-content;
+	}	
+}
+
 @define-mixin clearfix {
 		&::after {
 		content: "";
