--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -61,7 +61,7 @@
 
 	display: none;
 
-	@mixin atLarge {
+	@mixin atExLarge {
 		display: block;
 		position: absolute;
 		top: -66%;
