--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -195,6 +195,7 @@
 			z-index: 13;
 			transform: scale(1);
 			padding-top: 25px;
+			visibility: visible;
 
 			@mixin atLarge {
 				padding-top: 0;
